2018-01-31  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.46 released.

2018-01-30  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.45 released.

2018-01-18  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.44 released.

2018-01-17  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Version 2.11.43 released.

2018-01-17  Carl Hetherington  <cth@carlh.net>

	* Add some more DCP information to the player (#1170).

	* Add recent files list to player (#1171).

2018-01-16  Carl Hetherington  <cth@carlh.net>

	* Allow configuration of default value of upload-to-TMS button.

2018-01-15  Carl Hetherington  <cth@carlh.net>

	* Updated cs_CZ translation from Tomáš Begeni.

	* Updated pt_BR translation from Max Fuhlendorf.

	* Version 2.11.42 released.

2018-01-14  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Updated de_DE translation from Carsten Kurz.

	* Version 2.11.41 released.

2018-01-13  Carl Hetherington  <cth@carlh.net>

	* Allow specification of whether subtitle appearance settings
	will be forced to override the settings of the content.

2018-01-12  Carl Hetherington  <cth@carlh.net>

	* Fix crash when loading an incorrect KDM into the player (#1167).

	* Desensitize appropriate player menu options when there
	is no loaded DCP (#1167).

2018-01-11  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2018-01-10  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.40 released.

2018-01-09  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.39 released.

2018-01-09  Carl Hetherington  <cth@carlh.net>

	* Fix appearance controls for subtitles from DCP files (#1162).

2018-01-08  Carl Hetherington  <cth@carlh.net>

	* When doing jump-to-selected, jump to the first subtitle
	in any text subtitle content (#1160).

2018-01-07  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.
