@@ -1,5 +1,5 @@
 /*
-    Copyright (C) 2012-2016 Carl Hetherington <cth@carlh.net>
+    Copyright (C) 2012-2018 Carl Hetherington <cth@carlh.net>
 
     This file is part of DCP-o-matic.
 
@@ -166,6 +166,9 @@ public:
 	std::string content_summary (DCPTimePeriod period) const;
 
 	std::list<std::string> fix_conflicting_settings ();
+
+	bool references_dcp_video () const;
+	bool references_dcp_audio () const;
 
 	/** Identifiers for the parts of our state;
 	    used for signalling changes.
