@@ -88,6 +88,8 @@ private:
 
 	void config_changed ();
 
+	void setup_sensitivity ();
+
 	wxPanel* _panel;
 	wxNotebook* _notebook;
 	wxBoxSizer* _sizer;
